LC-534: Misc. Cleanup, Removing unnecessary uses of FileContentFetcher, call shutdown when startup has an error, testing FileUtils